Add dynamic contact information management system
Features:
- New Setting model for key-value configuration storage in database
- REST API endpoints for settings management (GET, PUT, POST /settings)
- Contact info modal in admin panel with validation (phone, email, address)
- Global ContactInfoManager for automatic updates across all pages
- Integrated contact-info.js in admin.html, index.html, payment.html, pages/contact.html
- Responsive button grid layout in admin actions section
- Default contact settings initialization in database seed
- data-contact attributes for dynamic content updates
- Email and phone number validation on client and server side
- Auto-refresh contact info after admin updates

--- a/index.html
+++ b/index.html
@@ -3950,6 +3950,9 @@
     <!-- Script de calcul prix avec majoration weekend -->
     <script src="carPricing.js"></script>
     
+    <!-- Script de gestion des informations de contact -->
+    <script src="contact-info.js"></script>
+    
     <!-- Script de gestion du thème Dark/Light -->
     <script src="theme.js"></script>
 </body>
