--- a/payment.html
+++ b/payment.html
@@ -847,5 +847,8 @@
     
     <!-- Script de gestion du thème Dark/Light -->
     <script src="theme.js"></script>
+    
+    <!-- Script de gestion des informations de contact -->
+    <script src="contact-info.js"></script>
 </body>
 </html>
