--- a/pages/faq.html
+++ b/pages/faq.html
@@ -184,155 +184,112 @@
         <a href="../index.html" class="back-link">← Retour à l'accueil</a>
 
         <div class="header">
-            <h1>❓ Foire Aux Questions (FAQ)</h1>
+            <h1>❓ FAQ - Questions Fréquentes</h1>
             <p>Trouvez rapidement les réponses à vos questions</p>
         </div>
 
         <!-- FAQ Items -->
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Comment réserver un véhicule ?</h3>
+                <h3>Quel est l'âge minimum pour louer un véhicule ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>La réservation est simple et rapide :</p>
-                <ul>
-                    <li>Sélectionnez vos dates et agences de départ/retour sur la page d'accueil</li>
-                    <li>Choisissez le véhicule qui correspond à vos besoins</li>
-                    <li>Remplissez vos informations personnelles</li>
-                    <li>Validez votre réservation</li>
-                </ul>
-                <p>Vous recevrez une confirmation par email dans les 2 heures.</p>
+                <p>Vous devez avoir <strong>30 ans minimum</strong>.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Quels documents dois-je présenter ?</h3>
+                <h3>Combien d'années de permis de conduire ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Pour récupérer votre véhicule, vous devez présenter :</p>
-                <ul>
-                    <li>Une pièce d'identité valide (carte d'identité ou passeport)</li>
-                    <li>Un permis de conduire valide depuis au moins 1 an</li>
-                    <li>Une carte bancaire pour le dépôt de garantie</li>
-                </ul>
-                <p>Tous les documents doivent être originaux (pas de photocopies).</p>
+                <p>Vous devez être titulaire d'un permis de conduire depuis <strong>plus de 5 ans</strong>.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Quel est le montant du dépôt de garantie ?</h3>
+                <h3>Je veux réserver un véhicule. Comment obtenir le prix de la location ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Le dépôt de garantie est de <strong>5000 DA</strong> pour tous nos véhicules.</p>
-                <p>Ce montant est bloqué sur votre carte bancaire lors de la prise du véhicule et libéré sous 7 jours après le retour, si aucun dommage n'est constaté.</p>
+                <p>Pour obtenir un tarif, c'est très simple ! Depuis la page d'accueil, choisissez votre agence, vos dates de location et un type de véhicule et laissez-vous guider.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Puis-je annuler ma réservation ?</h3>
+                <h3>Mon vol a du retard ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Oui, selon notre politique d'annulation :</p>
-                <ul>
-                    <li><strong>Gratuit</strong> : annulation jusqu'à 48h avant la prise du véhicule</li>
-                    <li><strong>30% de frais</strong> : annulation entre 48h et 24h</li>
-                    <li><strong>50% de frais</strong> : annulation moins de 24h avant</li>
-                    <li><strong>100% de frais</strong> : en cas de non-présentation</li>
-                </ul>
+                <p>Nous vous garantissons la livraison de votre voiture, même si le vol est en retard et <strong>sans aucun supplément</strong>.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Le kilométrage est-il illimité ?</h3>
+                <h3>Puis-je partager le volant avec un autre conducteur ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p><strong>Oui !</strong> Tous nos tarifs incluent le kilométrage illimité. Vous pouvez rouler autant que vous le souhaitez sans frais supplémentaires.</p>
+                <p>Oui, vous pouvez ajouter un autre conducteur lors de la réservation en ligne. Précisez le nombre de conducteurs additionnels en étape 2 "Choix des options".</p>
+                <p>Pensez à présenter le(s) permis de conduire au départ de la location.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>L'assurance est-elle incluse ?</h3>
+                <h3>Est-il possible de rendre un véhicule dans une agence différente de l'agence de départ ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Oui, nos tarifs incluent :</p>
-                <ul>
-                    <li>L'assurance responsabilité civile (obligatoire)</li>
-                    <li>L'assurance tous risques avec franchise de 10 000 DA</li>
-                    <li>L'assistance 24h/24 et 7j/7</li>
-                </ul>
-                <p>En cas d'accident responsable, seule la franchise reste à votre charge.</p>
+                <p>Oui, c'est possible. Ce service vous permet de louer dans une agence, et de la rendre dans une autre.</p>
+                <p><strong>Des frais s'appliquent.</strong></p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Dois-je retourner le véhicule avec le plein ?</h3>
+                <h3>Proposez-vous des sièges auto à la location ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p><strong>Oui</strong>, le véhicule doit être retourné avec le plein de carburant.</p>
-                <p>Si ce n'est pas le cas, nous facturerons le carburant manquant au tarif station + des frais de service de 1000 DA.</p>
+                <p>Oui. Vous trouverez (en page 2) 3 types de sièges enfant en fonction de l'âge de votre enfant.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Puis-je ajouter un conducteur supplémentaire ?</h3>
+                <h3>Puis-je prolonger ma location ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Oui, vous pouvez ajouter un conducteur supplémentaire lors de la prise du véhicule.</p>
-                <p>Le conducteur supplémentaire doit :</p>
-                <ul>
-                    <li>Être présent lors de la prise du véhicule</li>
-                    <li>Présenter les mêmes documents que le conducteur principal</li>
-                    <li>Avoir au moins 21 ans et un permis valide depuis 1 an</li>
-                </ul>
-                <p>Des frais supplémentaires de 500 DA/jour peuvent s'appliquer.</p>
+                <p>Si vous avez du retard, ou si vous souhaitez conserver le véhicule plus longtemps, contactez votre agence dès que possible.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Que faire en cas de panne ou d'accident ?</h3>
+                <h3>Que se passe-t-il si je ramène le véhicule plus tôt que prévu ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>En cas de problème :</p>
-                <ul>
-                    <li>Contactez immédiatement notre assistance au <span data-contact="phone">+213 771 39 14 80</span></li>
-                    <li>Ne quittez pas les lieux</li>
-                    <li>En cas d'accident, établissez un constat amiable</li>
-                    <li>Prenez des photos des dommages</li>
-                </ul>
-                <p>Notre équipe vous assistera et organisera le dépannage ou le remplacement du véhicule si nécessaire.</p>
+                <p>En cas de nécessité, vous pouvez bien entendu rendre le véhicule plus tôt que prévu. Veuillez toutefois garder à l'esprit que dans ce cas <strong>aucun remboursement pour les jours non utilisés n'est envisageable</strong>.</p>
+                <p>Il est également possible que la location vous coûte plus cher, car certains tarifs ou remises ne s'appliquent que pour la durée de location initialement réservée.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question" onclick="toggleFaq(this)">
-                <h3>Puis-je louer un véhicule pour quelqu'un d'autre ?</h3>
+                <h3>Que faire en cas de panne ou problème technique du véhicule ?</h3>
                 <span class="faq-icon">+</span>
             </div>
             <div class="faq-answer">
-                <p>Oui, mais le conducteur principal doit :</p>
-                <ul>
-                    <li>Être présent lors de la prise du véhicule</li>
-                    <li>Présenter tous les documents requis à son nom</li>
-                    <li>Signer le contrat de location</li>
-                </ul>
-                <p>Le paiement peut être effectué par une tierce personne, mais le conducteur doit fournir une carte bancaire pour le dépôt de garantie.</p>
+                <p>En cas de problème technique ou panne du véhicule loué, vous devez contacter l'équipe ANISTOUR au numéro inscrit sur votre contrat.</p>
+                <p><strong>⚠️ Important :</strong> Sous aucune condition, le locataire n'est autorisé à procéder ou à faire procéder à des réparations ou à des travaux de service sans l'accord formel et préalable de l'agence.</p>
             </div>
         </div>
 
